--- a/versions/latest/modules/en/pages/api/api-tokens.adoc
+++ b/versions/latest/modules/en/pages/api/api-tokens.adoc
@@ -1,6 +1,6 @@
 = Using API Tokens
 
-Rancher v2.8.0 introduced the xref:api/api-reference.adocx[Rancher Kubernetes API] which can be used to manage Rancher resources through `kubectl`. This page covers information on API tokens used with the xref:rancher-admin/cli/rancher-cli.adoc[Rancher CLI], xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc#_about_the_kubeconfig_file[kubeconfig files], Terraform and the xref:api/v3-rancher-api-guide.adoc#_enable_view_in_api[v3 API browser].
+Rancher v2.8.0 introduced the xref:api/api-reference.adoc[Rancher Kubernetes API] which can be used to manage Rancher resources through `kubectl`. This page covers information on API tokens used with the xref:rancher-admin/cli/rancher-cli.adoc[Rancher CLI], xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc#_about_the_kubeconfig_file[kubeconfig files], Terraform and the xref:api/v3-rancher-api-guide.adoc#_enable_view_in_api[v3 API browser].
 
 By default, some cluster-level API tokens are generated with infinite time-to-live (`ttl=0`). In other words, API tokens with `ttl=0` never expire unless you invalidate them. Tokens are not invalidated by changing a password.
 
