--- a/versions/latest/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
@@ -4,7 +4,7 @@ In the Rancher UI, etcd backup and recovery for xref:cluster-deployment/launch-k
 
 Rancher recommends configuring recurrent `etcd` snapshots for all production clusters. Additionally, one-time snapshots can be taken as well.
 
-Snapshots of the etcd database are taken and saved either <<_local_backup_target,locally onto the etcd nodes>> or to a <<s3-backup-target,S3 compatible target>>. The advantages of configuring S3 is that if all etcd nodes are lost, your snapshot is saved remotely and can be used to restore the cluster.
+Snapshots of the etcd database are taken and saved either <<_local_backup_target,locally onto the etcd nodes>> or to a <<_s3_backup_target,S3 compatible target>>. The advantages of configuring S3 is that if all etcd nodes are lost, your snapshot is saved remotely and can be used to restore the cluster.
 
 == How Snapshots Work
 
@@ -168,7 +168,7 @@ Tab RKE::
 --
 Select how often you want recurring snapshots to be taken as well as how many snapshots to keep. The amount of time is measured in hours. With timestamped snapshots, the user has the ability to do a point-in-time recovery.
 
-By default, xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher launched Kubernetes clusters] are configured to take recurring snapshots (saved to local disk). To protect against local disk failure, using the <<s3-backup-target,S3 Target>> or replicating the path on disk is advised.
+By default, xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher launched Kubernetes clusters] are configured to take recurring snapshots (saved to local disk). To protect against local disk failure, using the <<_s3_backup_target,S3 Target>> or replicating the path on disk is advised.
 
 During cluster provisioning or editing the cluster, the configuration for snapshots can be found in the advanced section for *Cluster Options*. Click on *Show advanced options*.
 
@@ -200,7 +200,7 @@ Tab RKE2/K3s::
 --
 Set the schedule for how you want recurring snapshots to be taken as well as how many snapshots to keep. The schedule is conventional cron format. The retention policy dictates the number of snapshots matching a name to keep per node.
 
-By default, xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher launched Kubernetes clusters] are configured to take recurring snapshots (saved to local disk) every 5 hours starting at 12 AM. To protect against local disk failure, using the <<s3-backup-target,S3 Target>> or replicating the path on disk is advised.
+By default, xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher launched Kubernetes clusters] are configured to take recurring snapshots (saved to local disk) every 5 hours starting at 12 AM. To protect against local disk failure, using the <<_s3_backup_target,S3 Target>> or replicating the path on disk is advised.
 
 During cluster provisioning or editing the cluster, the configuration for snapshots can be found under *Cluster Configuration*. Click on *etcd*.
 
@@ -263,14 +263,14 @@ If the etcd snapshot creation fails, the phase will be set to `Failed`.
 --
 ====== 
 
-*Result:* Based on your <<snapshot-backup-targets,snapshot backup target>>, a one-time snapshot will be taken and saved in the selected backup target.
+*Result:* Based on your <<_snapshot_backup_targets,snapshot backup target>>, a one-time snapshot will be taken and saved in the selected backup target.
 
 == Snapshot Backup Targets
 
 Rancher supports two different backup targets:
 
-* <<local_backup_target,Local Target>>
-* <<s3_backup_target,S3 Target>>
+* <<_local_backup_target,Local Target>>
+* <<_s3_backup_target,S3 Target>>
 
 === Local Backup Target
 
