--- a/versions/latest/modules/en/pages/cluster-admin/backups-and-restore/restore.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/backups-and-restore/restore.adoc
@@ -76,7 +76,7 @@ If you are using link:backups.md#local-backup-target[local snapshots], it is *VE
  .. In the *Clusters* page, go to the cluster where you want to remove nodes.
  .. In the *Machines* tab, click *⋮ > Delete* on each node you want to delete. Initially, you will see the nodes hang in a `deleting` state, but once all etcd nodes are deleting, they will be removed together. This is due to the fact that Rancher sees all etcd nodes deleting and proceeds to "short circuit" the etcd safe-removal logic.
 . After all etcd nodes are removed, add the new etcd node that you are planning to restore from. Assign the new node the role of `all` (etcd, controlplane, and worker).
- ** If the node was previously in a cluster, link:../manage-clusters/clean-cluster-nodes.adoc#cleaning-up-nodes[clean the node] first.
+ ** If the node was previously in a cluster, xref:cluster-admin/manage-clusters/clean-cluster-nodes.adoc#_cleaning_up_nodes[clean the node] first.
  ** For custom clusters, go to the *Registration* tab and check the box for `etcd, controlplane, and worker`. Then copy and run the registration command on your node.
  ** For node driver clusters, a new node is provisioned automatically.
 
@@ -138,4 +138,4 @@ This command outputs the running command for etcd, save this command to use late
  ** If you originally had more than 1 etcd node, then you need to change `--initial-cluster` to only contain the node that remains.
  ** Add `--force-new-cluster` to the end of the command.
 . Run the revised command.
-. After the single nodes is up and running, Rancher recommends adding additional etcd nodes to your cluster. If you have a xref:cluster-deployment/custom-clusters/custom-cluster.adoc[custom cluster] and you want to reuse an old node, you are required to xref:manage-clusters/clean-cluster-nodes.adoc#cleaning-up-nodes[clean up the nodes] before attempting to add them back into a cluster.
+. After the single nodes is up and running, Rancher recommends adding additional etcd nodes to your cluster. If you have a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster] and you want to reuse an old node, you are required to xref:cluster-admin/manage-clusters/clean-cluster-nodes.adoc#_cleaning_up_nodes[clean up the nodes] before attempting to add them back into a cluster.
