--- a/versions/latest/modules/en/pages/cluster-admin/helm-charts-in-rancher/oci-repositories.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/helm-charts-in-rancher/oci-repositories.adoc
@@ -52,7 +52,7 @@ It may take some time for the OCI repository to activate. This is particularly t
 
 == Authentication for OCI-Based Helm Chart Repositories
 
-Rancher supports BasicAuth for OCI registries. You must create a https://kubernetes.io/docs/concepts/configuration/secret/#basic-authentication-secret[*BasicAuth* Kubernetes secret]. You can also xref:security/serets-hub.adoc[create the secret through the Rancher UI].
+Rancher supports BasicAuth for OCI registries. You must create a https://kubernetes.io/docs/concepts/configuration/secret/#basic-authentication-secret[*BasicAuth* Kubernetes secret]. You can also xref:security/secrets-hub.adoc[create the secret through the Rancher UI].
 
 The CRD that is linked to the OCI-based Helm repository is `ClusterRepo`.
 
