--- a/versions/latest/modules/en/pages/cluster-admin/kubernetes-resources/kubernetes-resources-setup.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/kubernetes-resources/kubernetes-resources-setup.adoc
@@ -57,5 +57,5 @@ Resources include:
 
 * xref:security/encrypting-http.adoc[Certificates]: Files used to encrypt/decrypt data entering or leaving the cluster.
 * xref:cluster-admin/kubernetes-resources/configmaps.adoc[ConfigMaps]: Files that store general configuration information, such as a group of config files.
-* xref:security/serets-hub.adoc[Secrets]: Files that store sensitive data like passwords, tokens, or keys.
+* xref:security/secrets-hub.adoc[Secrets]: Files that store sensitive data like passwords, tokens, or keys.
 * xref:cluster-admin/kubernetes-resources/kubernetes-and-docker-registries.adoc[Registries]: Files that carry credentials used to authenticate with private registries.
