--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
@@ -9,7 +9,7 @@ A project is a group of namespaces, and it is a concept introduced by Rancher. P
 [NOTE]
 ====
 
-Projects are de-emphasized on the UI because it is not required to create Kubernetes resources within a project scope. However, resources such as xref:security/serets-hub.adoc#_creating_secrets_in_projects[Secrets] can still be created in a project scope if the legacy feature flag is enabled.
+Projects are de-emphasized on the UI because it is not required to create Kubernetes resources within a project scope. However, resources such as xref:security/secrets-hub.adoc#_creating_secrets_in_projects[Secrets] can still be created in a project scope if the legacy feature flag is enabled.
 ====
 
 
@@ -42,7 +42,7 @@ You can assign the following resources directly to namespaces:
 * xref:security/encrypting-http.adoc[Certificates]
 * xref:cluster-admin/kubernetes-resources/configmaps.adoc[ConfigMaps]
 * xref:cluster-admin/kubernetes-resources/kubernetes-and-docker-registries.adoc[Registries]
-* xref:security/serets-hub.adoc[Secrets]
+* xref:security/secrets-hub.adoc[Secrets]
 
 To manage permissions in a vanilla Kubernetes cluster, cluster admins configure role-based access policies for each namespace. With Rancher, user permissions are assigned on the project level instead, and permissions are automatically inherited by any namespace owned by the particular project.
 
