--- a/versions/latest/modules/en/pages/cluster-admin/namespaces.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/namespaces.adoc
@@ -1,5 +1,4 @@
 = Namespaces
-:experimental:
 
 Within Rancher, you can further divide projects into different https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/[namespaces], which are virtual clusters within a project backed by a physical cluster. Should you require another level of organization beyond projects and the `default` namespace, you can use multiple namespaces to isolate applications and resources.
 
@@ -14,7 +13,7 @@ Resources that you can assign directly to namespaces include:
 * xref:security/encrypting-http.adoc[Certificates]
 * xref:cluster-admin/kubernetes-resources/configmaps.adoc[ConfigMaps]
 * xref:cluster-admin/kubernetes-resources/kubernetes-and-docker-registries.adoc[Registries]
-* xref:security/serets-hub.adoc[Secrets]
+* xref:security/secrets-hub.adoc[Secrets]
 
 To manage permissions in a vanilla Kubernetes cluster, cluster admins configure role-based access policies for each namespace. With Rancher, user permissions are assigned on the project level instead, and permissions are automatically inherited by any namespace owned by the particular project.
 
