--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -42,12 +42,12 @@ Tab RKE::
 [pass]
 <h3><a class="anchor" href="#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
 
-Creating a link:use-new-nodes-in-an-infra-provider.adoc#node-templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.
+Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.
 
 . Click *☰ > Cluster Management*.
 . Click menu:RKE1 Configuration[Node Templates]
 . Click *Add Template*.
-. Fill out a node template for EC2. For help filling out the form, refer to xref:../../../../reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/amazon-ec2.adoc[EC2 Node Template Configuration.]
+. Fill out a node template for EC2. For help filling out the form, refer to xref:cluster-deployment/infra-providers/aws/node-template-configuration.adoc[EC2 Node Template Configuration.]
 . Click *Create*.
 +
 [NOTE]
@@ -58,14 +58,14 @@ If you want to use the https://kubernetes.io/docs/concepts/services-networking/d
 [pass]
 <h3><a class="anchor" href="#_s3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
 
-Add one or more node pools to your cluster. For more information about node pools, see xref:use-new-nodes-in-an-infra-provider.adoc[this section.]
+Add one or more node pools to your cluster. For more information about node pools, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
 
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
 . Click *Amazon EC2*.
-. Create a node pool for each Kubernetes role. For each node pool, choose a node template that you created. For more information about node pools, including best practices for assigning Kubernetes roles to them, see xref:use-new-nodes-in-an-infra-provider.adoc[this section.]
+. Create a node pool for each Kubernetes role. For each node pool, choose a node template that you created. For more information about node pools, including best practices for assigning Kubernetes roles to them, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
 . Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
-. Use *Cluster Options* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. Refer to xref:../../kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/set-up-cloud-providers.adoc[Selecting Cloud Providers] to configure the Kubernetes Cloud Provider. For help configuring the cluster, refer to the xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/rke1-cluster-configuration.adoc[RKE cluster configuration reference.]
+. Use *Cluster Options* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. Refer to xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Selecting Cloud Providers] to configure the Kubernetes Cloud Provider. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
 +
 [NOTE]
 ====
@@ -103,9 +103,9 @@ If you already have a set of cloud credentials to use, skip this section.
 . Click *Amazon EC2*.
 . Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
 . Enter a *Cluster Name*.
-. Create a machine pool for each Kubernetes role. Refer to the link:use-new-nodes-in-an-infra-provider.adoc#node-roles[best practices] for recommendations on role assignments and counts.
- .. For each machine pool, define the machine configuration. Refer to xref:../../../../reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc[the EC2 machine configuration reference] for information on configuration options.
-. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 cluster configuration reference.]
+. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_roles[best practices] for recommendations on role assignments and counts.
+ .. For each machine pool, define the machine configuration. Refer to xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[the EC2 machine configuration reference] for information on configuration options.
+. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
 . Click *Create*.
 --
