--- a/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
@@ -303,7 +303,7 @@ rancher_kubernetes_engine_config:
     useInstanceMetadataHostname: true
 ----
 +
-You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/use-existing-nodes.adoc[custom cluster], add xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/rancher-agent-options.adoc[`--node-name`] to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using *Show Advanced Options* in the Rancher UI to add *Node Name*.
+You must not enable `useInstanceMetadataHostname` when setting custom values for `hostname-override` for custom clusters. When you create a xref:cluster-deployment/custom-clusters/custom-clusters.adoc[custom cluster], add xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc[`--node-name`] to the `docker run` node registration command to set `hostname-override` -- for example, `"$(hostname -f)"`. This can be done manually or by using *Show Advanced Options* in the Rancher UI to add *Node Name*.
 
 . Select the cloud provider.
 +
@@ -324,7 +324,7 @@ rancher_kubernetes_engine_config:
 +
 Existing clusters that use an *External* cloud provider will set `--cloud-provider=external` for Kubernetes components but won't set the node name.
 
-. Install the AWS cloud controller manager after the cluster finishes provisioning. Note that the cluster isn't successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done manually, or via <<helm-chart-installation-from-ui,Helm charts in UI>>.
+. Install the AWS cloud controller manager after the cluster finishes provisioning. Note that the cluster isn't successfully provisioned and nodes are still in an `uninitialized` state until you deploy the cloud controller manager. This can be done manually, or via <<_helm_chart_installation_from_ui,Helm charts in UI>>.
 +
 Refer to the offical AWS upstream documentation for the https://kubernetes.github.io/cloud-provider-aws[cloud controller manager].
 --
