--- a/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -19,7 +19,7 @@ For help setting up a Kubernetes cluster, we provide these tutorials:
 
 * *RKE:* For the tutorial to install an RKE Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/rke1-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability RKE cluster, refer to xref:installation-and-upgrade/infrastructure-setup/ha-rke1-kubernetes-cluster.adoc[this page.]
 * *K3s:* For the tutorial to install a K3s Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability K3s cluster, refer to xref:installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc[this page.]
-* *RKE2:* For the tutorial to install an RKE2 Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability RKE2 cluster, refer to xref:installation-and-upgrade/infrastructure-setupp/ha-rke2-kubernetes-cluster.adoc[this page.]
+* *RKE2:* For the tutorial to install an RKE2 Kubernetes cluster, refer to xref:installation-and-upgrade/install-kubernetes/rke2-for-rancher.adoc[this page.] For help setting up the infrastructure for a high-availability RKE2 cluster, refer to xref:installation-and-upgrade/infrastructure-setup/ha-rke2-kubernetes-cluster.adoc[this page.]
 * *Amazon EKS:* For details on how to install Rancher on Amazon EKS, including how to install an Ingress controller so that the Rancher server can be accessed, refer to xref:installation-and-upgrade/hosted-kubernetes/rancher-on-amazon-eks.adoc[this page.]
 * *AKS:* For details on how to install Rancher with Azure Kubernetes Service, including how to install an Ingress controller so that the Rancher server can be accessed, refer to xref:installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc[this page.]
 * *GKE:* For details on how to install Rancher with Google Kubernetes Engine, including how to install an Ingress controller so that the Rancher server can be accessed, refer to xref:installation-and-upgrade/hosted-kubernetes/rancher-on-gke.adoc[this page.] GKE has two modes of operation when creating a Kubernetes cluster, Autopilot and Standard mode. The cluster configuration for Autopilot mode has restrictions on editing the kube-system namespace. However, Rancher needs to create resources in the kube-system namespace during installation. As a result, you will not be able to install Rancher on a GKE cluster created in Autopilot mode.
@@ -266,7 +266,7 @@ In the following command,
 [CAUTION]
 ====
 
-When `agent-tls-mode` is set to `strict` (the default value for new installs of Rancher starting from v2.9.0), you must supply the `privateCA=true` chart value (e.x. through `--set privateCA=true`) and upload the Let's Encrypt Certificate Authority as outlined in xref:../resources/add-tls-secrets.adoc[Adding TLS Secrets]. Information on identifying the Let's Encrypt Root CA can be found in the Let's Encrypt https://letsencrypt.org/certificates/[docs]. If you don't upload the CA, then Rancher may fail to connect to new or existing downstream clusters.
+When `agent-tls-mode` is set to `strict` (the default value for new installs of Rancher starting from v2.9.0), you must supply the `privateCA=true` chart value (e.x. through `--set privateCA=true`) and upload the Let's Encrypt Certificate Authority as outlined in xref:installation-and-upgrade/resources/tls-secrets.adoc[Adding TLS Secrets]. Information on identifying the Let's Encrypt Root CA can be found in the Let's Encrypt https://letsencrypt.org/certificates/[docs]. If you don't upload the CA, then Rancher may fail to connect to new or existing downstream clusters.
 ====
 
 
@@ -307,7 +307,7 @@ Although an entry in the `Subject Alternative Names` is technically required, ha
 [NOTE]
 ====
 
-If you want to check if your certificates are correct, see link:../../../faq/technical-items.adoc#how-do-i-check-common-name-and-subject-alternative-names-in-my-server-certificate[How do I check Common Name and Subject Alternative Names in my server certificate?]
+If you want to check if your certificates are correct, see xref:../../../faq/technical-items.adoc#_how_do_i_check_common_name_and_subject_alternative_names_in_my_server_certificate[How do I check Common Name and Subject Alternative Names in my server certificate?]
 ====
 
 
@@ -341,17 +341,17 @@ helm install rancher rancher-<CHART_REPO>/rancher \
   --set privateCA=true
 ----
 
-Now that Rancher is deployed, see xref:../resources/add-tls-secrets.adoc[Adding TLS Secrets] to publish the certificate files so Rancher and the Ingress controller can use them.
+Now that Rancher is deployed, see xref:installation-and-upgrade/resources/tls-secrets.adoc[Adding TLS Secrets] to publish the certificate files so Rancher and the Ingress controller can use them.
 --
 ======
 
 The Rancher chart configuration has many options for customizing the installation to suit your specific environment. Here are some common advanced scenarios.
 
-* link:../installation-references/helm-chart-options.adoc#http-proxy[HTTP Proxy]
-* link:../installation-references/helm-chart-options.adoc#private-registry-and-air-gap-installs[Private Container Image Registry]
-* link:../installation-references/helm-chart-options.adoc#external-tls-termination[TLS Termination on an External Load Balancer]
+* xref:installation-and-upgrade/references/helm-chart-options.adoc#_http_proxy[HTTP Proxy]
+* xref:installation-and-upgrade/references/helm-chart-options.adoc#_private_registry_and_air_gap_installs[Private Container Image Registry]
+* xref:installation-and-upgrade/references/helm-chart-options.adoc#_external_tls_termination[TLS Termination on an External Load Balancer]
 
-See the xref:../installation-references/helm-chart-options.adoc[Chart Options] for the full list of options.
+See the xref:installation-and-upgrade/references/helm-chart-options.adoc[Chart Options] for the full list of options.
 
 === 6. Verify that the Rancher Server is Successfully Deployed
 
@@ -383,4 +383,4 @@ That's it. You should have a functional Rancher server.
 
 In a web browser, go to the DNS name that forwards traffic to your load balancer. Then you should be greeted by the colorful login page.
 
-Doesn't work? Take a look at the xref:troubleshooting.adoc[Troubleshooting] Page
+Doesn't work? Take a look at the xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[Troubleshooting] Page
