--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
@@ -411,6 +411,4 @@ The "rancher-cluster" parts of the two latter file names are dependent on how yo
 
 == Issues or Errors?
 
-See the xref:../../install-upgrade-on-a-kubernetes-cluster/troubleshooting.adoc[Troubleshooting] page.
-
-== xref:install-rancher-ha.adoc[Next: Install Rancher]
+See the xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[Troubleshooting] page.
