--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -24,10 +24,10 @@ Tab Linux Only Clusters::
 --
 For Rancher servers that will only provision Linux clusters, these are the steps to populate your private registry.
 
-. <<1-find-the-required-assets-for-your-rancher-version,Find the required assets for your Rancher version>>
-. <<2-collect-the-cert-manager-image,Collect the cert-manager image>> (unless you are bringing your own certificates or terminating TLS on a load balancer)
-. <<3-save-the-images-to-your-workstation,Save the images to your workstation>>
-. <<4-populate-the-private-registry,Populate the private registry>>
+. <<_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
+. <<_2_collect_the_cert_manager_image,Collect the cert-manager image>> (unless you are bringing your own certificates or terminating TLS on a load balancer)
+. <<_3_save_the_images_to_your_workstation,Save the images to your workstation>>
+. <<_4_populate_the_private_registry,Populate the private registry>>
 
 [pass]
 <h3><a class="anchor" href="#_prerequisites"></a>Prerequisites</h3>
@@ -72,7 +72,7 @@ In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS
 [NOTE]
 ====
 +
-Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:../../resources/upgrade-cert-manager.adoc[upgrade documentation].
+Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
 +
 ====
 
@@ -291,7 +291,7 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 [NOTE]
 ====
 +
-Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:../../resources/upgrade-cert-manager.adoc[upgrade documentation].
+Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
 +
 ====
 
