--- a/versions/latest/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -8,7 +8,7 @@ We don't recommend installing Rancher locally because it creates a networking pr
 
 Your Linux machine can be anywhere. It could be an Amazon EC2 instance, a Digital Ocean droplet, or an Azure virtual machine, to name a few examples. Other Rancher docs often use 'node' as a generic term for all of these. One possible way to deploy a Linux machine is by setting up an Amazon EC2 instance as shown in xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[this tutorial].
 
-The full installation requirements are xref:installation-and-upgrade/requirements/installation-requirements.adoc[here].
+The full installation requirements are xref:installation-and-upgrade/requirements/requirements.adoc[here].
 
 == Install K3s on Linux
 
@@ -124,11 +124,11 @@ helm install cert-manager jetstack/cert-manager `
 
 The final command to install Rancher is below. The command requires a domain name that forwards traffic to the Linux machine. For the sake of simplicity in this tutorial, you can use a fake domain name to create your proof-of-concept. An example of a fake domain name would be `<IP_OF_LINUX_NODE>.sslip.io`.
 
-To install a specific Rancher version, use the `--version` flag (e.g., `--version 2.6.6`). Otherwise, the latest Rancher is installed by default. Refer to xref:../../installation-and-upgrade/resources/choose-a-rancher-version.adoc[Choosing a Rancher Version].
+To install a specific Rancher version, use the `--version` flag (e.g., `--version 2.6.6`). Otherwise, the latest Rancher is installed by default.
 
 For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
 
-See link:../../installation-and-upgrade/resources/bootstrap-password.adoc#password-requirements[Setting up the Bootstrap Password] for password requirments.
+See xref:../../installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirments.
 
 ----
 helm install rancher rancher-latest/rancher \
@@ -149,6 +149,6 @@ Now if you navigate to `<IP_OF_LINUX_NODE>.sslip.io` in a web browser, you shoul
 
 To make these instructions simple, we used a fake domain name and self-signed certificates to do this installation. Therefore, you will probably need to add a security exception to your web browser to see the Rancher UI. Note that for production installs, you would need a high-availability setup with a load balancer, a real domain name and real certificates.
 
-These instructions also left out the full installation requirements and other installation options. If you have any issues with these steps, refer to the full xref:../../installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[Helm CLI installation docs.]
+These instructions also left out the full installation requirements and other installation options. If you have any issues with these steps, refer to the full xref:installation-and-upgrade/install-rancher.adoc[Helm CLI installation docs.]
 
-To launch new Kubernetes clusters with your new Rancher server, you may need to set up cloud credentials in Rancher. For more information, see xref:../../../how-to-guides/new-user-guides/launch-kubernetes-with-rancher/launch-kubernetes-with-rancher.adoc[Launching Kubernetes clusters with Rancher.]
+To launch new Kubernetes clusters with your new Rancher server, you may need to set up cloud credentials in Rancher. For more information, see xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Launching Kubernetes clusters with Rancher.]
