--- a/versions/latest/modules/en/pages/installation-and-upgrade/resources/bootstrap-password.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/resources/bootstrap-password.adoc
@@ -18,7 +18,7 @@ Minimum password length can be any positive integer value between 2 and 256. Dec
 
 == Specifying the Bootstrap Password
 
-During xref:../install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[Rancher installation], set `bootstrapPassword` alongside any other flags for the Rancher Helm chart. For example:
+During xref:installation-and-upgrade/install-rancher.adoc[Rancher installation], set `bootstrapPassword` alongside any other flags for the Rancher Helm chart. For example:
 
 [,bash]
 ----
