--- a/versions/latest/modules/en/pages/observability/logging/enable-api-audit-log-in-downstream-clusters.adoc
+++ b/versions/latest/modules/en/pages/observability/logging/enable-api-audit-log-in-downstream-clusters.adoc
@@ -48,7 +48,7 @@ This feature is available in Rancher v2.7.2 and later.
 
 You can use `machineSelectorFiles` to deliver the audit policy file to the control plane nodes, and `machineGlobalConfig` to set the options on kube-apiserver.
 
-As a prerequisite, you must create a xref:../new-user-guides/kubernetes-resources-setup/secrets.adoc[secret] or xref:../new-user-guides/kubernetes-resources-setup/configmaps.adoc[configmap] to be the source of the audit policy.
+As a prerequisite, you must create a xref:security/secrets-hub.adoc[secret] or xref:cluster-admin/kubernetes-resources/configmaps.adoc[configmap] to be the source of the audit policy.
 
 The secret or configmap must meet the following requirements:
 
@@ -113,7 +113,7 @@ You can also use the directive `machineSelectorConfig` with proper machineLabelS
 ====
 
 
-For more information about cluster configuration, refer to the xref:../../reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 cluster configuration reference] pages.
+For more information about cluster configuration, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference] pages.
 --
 
 Tab K3s::
@@ -129,7 +129,7 @@ This feature is available in Rancher v2.7.2 and later.
 
 You can use `machineSelectorFiles` to deliver the audit policy file to the control plane nodes, and `machineGlobalConfig` to set the options on kube-apiserver.
 
-As a prerequisite, you must create a xref:../new-user-guides/kubernetes-resources-setup/secrets.adoc[secret] or xref:../new-user-guides/kubernetes-resources-setup/configmaps.adoc[configmap] to be the source of the audit policy.
+As a prerequisite, you must create a xref:security/secrets-hub.adoc[secret] or xref:cluster-admin/kubernetes-resources/configmaps.adoc[configmap] to be the source of the audit policy.
 
 The secret or configmap must meet the following requirements:
 
@@ -139,7 +139,7 @@ The secret or configmap must meet the following requirements:
 [TIP]
 ====
 
-Rancher Dashboard provides an easy-to-use form for creating the xref:../new-user-guides/kubernetes-resources-setup/secrets.adoc[secret] or xref:../new-user-guides/kubernetes-resources-setup/configmaps.adoc[configmap].
+Rancher Dashboard provides an easy-to-use form for creating the xref:security/secrets-hub.adoc[secret] or xref:cluster-admin/kubernetes-resources/configmaps.adoc[configmap].
 ====
 
 
@@ -194,7 +194,7 @@ You can also use the directive `machineSelectorConfig` with proper machineLabelS
 ====
 
 
-For more information about cluster configuration, refer to the xref:../../reference-guides/cluster-configuration/rancher-server-configuration/k3s-cluster-configuration.adoc[K3s cluster configuration reference] pages.
+For more information about cluster configuration, refer to the xref:cluster-deployment/configuration/k3s.adoc[K3s cluster configuration reference] pages.
 --
 
 Tab RKE1::
