--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/customizing-dashboard/create-persistent-grafana-dashboard.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/customizing-dashboard/create-persistent-grafana-dashboard.adoc
@@ -15,7 +15,7 @@ To allow the Grafana dashboard to persist after the Grafana instance restarts, a
 
 * The monitoring application needs to be installed.
 * To create the persistent dashboard, you must have at least the *Manage Config Maps* Rancher RBAC permissions assigned to you in the project or namespace that contains the Grafana Dashboards. This correlates to the `monitoring-dashboard-edit` or `monitoring-dashboard-admin` Kubernetes native RBAC Roles exposed by the Monitoring chart.
-* To see the links to the external monitoring UIs, including Grafana dashboards, you will need at least a link:../../../integrations-in-rancher/monitoring-and-alerting/rbac-for-monitoring.adoc#users-with-rancher-based-permissions[project-member role.]
+* To see the links to the external monitoring UIs, including Grafana dashboards, you will need at least a xref:observability/monitoring-and-dashboards/rbac-for-monitoring.adoc#_users_with_rancher_based_permissions[project-member role.]
 ====
 
 
@@ -64,7 +64,7 @@ data:
 
 By default, Grafana is configured to watch all ConfigMaps with the `grafana_dashboard` label within the `cattle-dashboards` namespace.
 
-To specify that you would like Grafana to watch for ConfigMaps across all namespaces, refer to <<configuring-namespaces-for-the-grafana-dashboard-configmap,this section>>.
+To specify that you would like Grafana to watch for ConfigMaps across all namespaces, refer to <<_configuring_namespaces_for_the_grafana_dashboard_configmap,this section>>.
 
 To create the ConfigMap through the Rancher UI, first make sure that you are currently logged in to the Grafana UI, to ensure that dashboards import without encountering permissions issues. Then, return to the Rancher UI and perform the following steps:
 
