--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/enable-monitoring.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/enable-monitoring.adoc
@@ -49,7 +49,7 @@ For more information about the default limits, see link:configuration/helm-chart
 
 === Enable Monitoring for use with SSL
 
-. Follow the steps on xref:security/serets-hub.adoc[this page] to create a secret in order for SSL to be used for alerts.
+. Follow the steps on xref:security/secrets-hub.adoc[this page] to create a secret in order for SSL to be used for alerts.
  ** The secret should be created in the `cattle-monitoring-system` namespace. If it doesn't exist, create it first.
  ** Add the `ca`, `cert`, and `key` files to the secret.
 . In the upper left corner, click *☰ > Cluster Management*.
