--- a/versions/latest/modules/en/pages/security/hardening-guides/rke1/rke1.adoc
+++ b/versions/latest/modules/en/pages/security/hardening-guides/rke1/rke1.adoc
@@ -188,7 +188,7 @@ Tab v1.25 and Newer::
 
 [NOTE]
 ====
-If you intend to import an RKE cluster into Rancher, please consult the xref:../../../../how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/psa-config-templates.adoc[documentation] for how to configure the PSA to exempt Rancher system namespaces.
+If you intend to import an RKE cluster into Rancher, please consult the xref:security/psact.adoc[documentation] for how to configure the PSA to exempt Rancher system namespaces.
 ====
 
 
