--- a/versions/latest/modules/en/pages/api/quickstart.adoc
+++ b/versions/latest/modules/en/pages/api/quickstart.adoc
@@ -4,7 +4,7 @@ You can access Rancher's resources through the Kubernetes API. This guide helps 
 
 . In the upper left corner, click *☰ > Global Settings*.
 . Find and copy the address in the `server-url` field.
-. xref:rancher-admin/user/settings/api-keys.adoc#_creating_an_api_key[Create] a Rancher API key with no scope.
+. xref:rancher-admin/users/settings/api-keys.adoc#_creating_an_api_key[Create] a Rancher API key with no scope.
 
 [WARNING]
 ====
@@ -46,7 +46,7 @@ For more information on available kubeconfig options, see the https://kubernetes
 
 == API kubectl Example
 
-In this example, we'll show how to use kubectl to create a project, followed by deleting it. For a list of other Rancher resources available, refer to the xref:api/api-reference.adocx[API Reference] page.
+In this example, we'll show how to use kubectl to create a project, followed by deleting it. For a list of other Rancher resources available, refer to the xref:api/api-reference.adoc[API Reference] page.
 
 [NOTE]
 ====
