--- a/versions/latest/modules/en/pages/cluster-admin/kubernetes-resources/configmaps.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/kubernetes-resources/configmaps.adoc
@@ -21,7 +21,7 @@ Kubernetes classifies ConfigMaps as https://kubernetes.io/docs/concepts/configur
 
 
 . Select the *Namespace* you want to add Config Map to.
-. On the *Data* tab, add a key-value pair to your ConfigMap. Add as many values as you need.  You can add multiple key value pairs to the ConfigMap by copying and pasting. Alternatively, use *Read from File* to add the data. Note: If you need to store sensitive data, xref:security/serets-hub.adoc[use a secret], not a ConfigMap.
+. On the *Data* tab, add a key-value pair to your ConfigMap. Add as many values as you need.  You can add multiple key value pairs to the ConfigMap by copying and pasting. Alternatively, use *Read from File* to add the data. Note: If you need to store sensitive data, xref:security/secrets-hub.adoc[use a secret], not a ConfigMap.
 . Click *Create*.
 
 *Result:* Your ConfigMap is added to the namespace. You can view it in the Rancher UI from the menu:Resources[Config Maps] view.
