--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/azure/azure.adoc
@@ -64,13 +64,13 @@ Tab RKE::
 [pass]
 <h3><a class="anchor" href="#_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
 
-Creating a link:use-new-nodes-in-an-infra-provider.adoc#node-templates[node template] for Azure will allow Rancher to provision new nodes in Azure. Node templates can be reused for other clusters.
+Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#node-templates[node template] for Azure will allow Rancher to provision new nodes in Azure. Node templates can be reused for other clusters.
 
 . Click *☰ > Cluster Management*.
 . Click menu:RKE1 Configuration[Node Templates].
 . Click *Add Template*.
 . Click *Azure*.
-. Fill out a node template for Azure. For help filling out the form, refer to xref:../../../../reference-guides/cluster-configuration/downstream-cluster-configuration/node-template-configuration/azure.adoc[Azure Node Template Configuration.]
+. Fill out a node template for Azure. For help filling out the form, refer to xref:cluster-deployment/infra-providers/azure/node-template-configuration.adoc[Azure Node Template Configuration.]
 
 [pass]
 <h3><a class="anchor" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
@@ -81,8 +81,8 @@ Use Rancher to create a Kubernetes cluster in Azure.
 . On the *Clusters* page, click *Create*.
 . Click *Azure*.
 . Enter a *Cluster Name*.
-. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices, see xref:use-new-nodes-in-an-infra-provider.adoc[this section.]
-. In the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*. For help configuring the cluster, refer to the xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/rke1-cluster-configuration.adoc[RKE cluster configuration reference.]
+. Add one or more node pools to your cluster. Each node pool uses a node template to provision new nodes. For more information about node pools, including best practices, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
+. In the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
 . Click *Create*.
 --
@@ -115,9 +115,9 @@ Use Rancher to create a Kubernetes cluster in Azure.
 . Click *Azure*.
 . Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
 . Enter a *Cluster Name*.
-. Create a machine pool for each Kubernetes role. Refer to the link:use-new-nodes-in-an-infra-provider.adoc#node-roles[best practices] for recommendations on role assignments and counts.
- .. For each machine pool, define the machine configuration. Refer to the xref:../../../../reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/azure.adoc[Azure machine configuration reference] for information on configuration options.
-. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation.  For help configuring the cluster, refer to the xref:../../../../reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 cluster configuration reference.]
+. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers.adoc#node-roles[best practices] for recommendations on role assignments and counts.
+ .. For each machine pool, define the machine configuration. Refer to the xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc[Azure machine configuration reference] for information on configuration options.
+. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation.  For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
 . Click *Create*.
 --
