--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/shutdown-vm.adoc
@@ -36,7 +36,7 @@ Tab RKE::
 . Click *Add Template* and select *vSphere* to create a node template.
 . Under *2. Scheduling*, in the *Graceful Shutdown Timeout* field, enter an integer value greater than 0. The value you enter is the amount of time in seconds Rancher waits before deleting VMs on the cluster. If the value is set to `0`, graceful shutdown is disabled.
 
-When you xref:../use-new-nodes-in-an-infra-provider.adoc[use the newly-created node template to create node pools], the nodes will gracefully shutdown of VMs according to the *Graceful Shutdown Timeout* value you have set.
+When you xref:cluster-deployment/infra-providers/infra-providers.adoc[use the newly-created node template to create node pools], the nodes will gracefully shutdown of VMs according to the *Graceful Shutdown Timeout* value you have set.
 --
 ======
 
@@ -50,7 +50,7 @@ In RKE2/K3s, you can edit the configuration of an existing VMware vSphere cluste
 
 == Enable Graceful Shutdown in Existing RKE Clusters
 
-In RKE, you can't directly edit an existing cluster's configuration to add graceful shutdown to existing VMware vSphere clusters. However, you can edit the configuration of existing node templates. As noted in xref:rancher-admin/user/settings/manage-node-templates.adoc#_updating_a_node_template[Updating a Node Template], all node pools using the node template automatically use the updated information when new nodes are added to the cluster.
+In RKE, you can't directly edit an existing cluster's configuration to add graceful shutdown to existing VMware vSphere clusters. However, you can edit the configuration of existing node templates. As noted in xref:rancher-admin/users/settings/manage-node-templates.adoc#_updating_a_node_template[Updating a Node Template], all node pools using the node template automatically use the updated information when new nodes are added to the cluster.
 
 To edit an existing node template to enable graceful shutdown:
 
