--- a/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/amazon.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/amazon.adoc
@@ -57,7 +57,7 @@ spec:
 kubectl cordon -l "node-role.kubernetes.io/control-plane=true"
 ----
 +
-. To install the AWS cloud controller manager with leader migration enabled, follow Steps 1-3 for link:../set-up-cloud-providers/amazon.adoc#using-the-out-of-tree-aws-cloud-provider[deploying the cloud controller manager chart]. From Kubernetes 1.22 onwards, the kube-controller-manager will utilize a default configuration which will satisfy the controller-to-manager migration. Update container args of the `aws-cloud-controller-manager` under `spec.rkeConfig.additionalManifest` to enable leader migration:
+. To install the AWS cloud controller manager with leader migration enabled, follow Steps 1-3 for xref:cluster-deployment/set-up-cloud-providers/amazon#_using_the_out_of_tree_aws_cloud_provider[deploying the cloud controller manager chart]. From Kubernetes 1.22 onwards, the kube-controller-manager will utilize a default configuration which will satisfy the controller-to-manager migration. Update container args of the `aws-cloud-controller-manager` under `spec.rkeConfig.additionalManifest` to enable leader migration:
 +
 [,shell]
 ----
@@ -162,7 +162,7 @@ cloud_provider:
 kubectl cordon -l "node-role.kubernetes.io/controlplane=true"
 ----
 
-. To install the AWS cloud controller manager, you must enable leader migration and follow the same steps as when installing AWS on a new cluster. To enable leader migration, add the following to the container arguments in step 7 while following the link:../set-up-cloud-providers/amazon.adoc#helm-chart-installation-from-ui[steps to install the chart]:
+. To install the AWS cloud controller manager, you must enable leader migration and follow the same steps as when installing AWS on a new cluster. To enable leader migration, add the following to the container arguments in step 7 while following the xref:cluster-deployment/set-up-cloud-providers/amazon#_helm_chart_installation_from_ui[steps to install the chart]:
 +
 [,yaml]
 ----
