--- a/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/migrate-to-an-out-of-tree-cloud-provider/azure.adoc
@@ -62,9 +62,9 @@ kubectl cordon -l "node-role.kubernetes.io/control-plane=true"
 ----
 
 . To deploy the Azure cloud controller manager, use any of the available options:
- ** UI: Follow steps 1-10 of link:../set-up-cloud-providers/azure.adoc#helm-chart-installation-from-ui[Helm chart installation from UI] to install the cloud controller manager chart.
- ** CLI: Follow steps 1-4 of link:../set-up-cloud-providers/azure.adoc#helm-chart-installation-from-cli[Helm chart installation from CLI].
- ** Update the cluster's additional manifest: Follow steps 2-3 to link:../set-up-cloud-providers/azure.adoc#using-the-out-of-tree-azure-cloud-provider[install the cloud controller manager chart].
+ ** UI: Follow steps 1-10 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
+ ** CLI: Follow steps 1-4 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_cli[Helm chart installation from CLI].
+ ** Update the cluster's additional manifest: Follow steps 2-3 to xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_using_the_out_of_tree_azure_cloud_provider[install the cloud controller manager chart].
 
 +
 Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes.
@@ -167,8 +167,8 @@ kubectl cordon -l "node-role.kubernetes.io/controlplane=true"
 ----
 
 . To install the Azure cloud controller manager, follow the same steps as when installing Azure cloud provider on a new cluster:
- ** UI: Follow steps 1-10 of link:../set-up-cloud-providers/azure.adoc#helm-chart-installation-from-ui[Helm chart installation from UI] to install the cloud controller manager chart.
- ** CLI: Follow steps 1-4 of link:../set-up-cloud-providers/azure.adoc#helm-chart-installation-from-cli[Helm chart installation from CLI] to install the cloud controller manager chart.
+ ** UI: Follow steps 1-10 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_ui[Helm chart installation from UI] to install the cloud controller manager chart.
+ ** CLI: Follow steps 1-4 of xref:cluster-deployment/set-up-cloud-providers/azure.adoc#_helm_chart_installation_from_cli[Helm chart installation from CLI] to install the cloud controller manager chart.
 . Confirm that the chart is installed but that the new pods aren't running yet due to cordoned controlplane nodes. After updating the cluster in the next step, RKE will upgrade and uncordon each node, and schedule `cloud-controller-manager` pods.
 . To enable leader migration, add `--enable-leader-migration` to the container arguments of `cloud-controller-manager`:
 +
