--- a/versions/latest/modules/en/pages/integrations/rancher-extensions.adoc
+++ b/versions/latest/modules/en/pages/integrations/rancher-extensions.adoc
@@ -168,7 +168,7 @@ After you successfully set up these resources, you can install the extensions fr
 === Importing and Installing Extensions in an Air-gapped Environment
 
 . Find the address of the container image repository that you want to import as an extension. You should import and use the latest tagged version of the image to ensure you receive the latest features and security updates.
- ** *(Optional)* If the container image is private: xref:security/serets-hub.adoc[Create] a registry secret within the `cattle-ui-plugin-system` namespace. Enter the domain of the image address in the *Registry Domain Name* field.
+ ** *(Optional)* If the container image is private: xref:security/secrets-hub.adoc[Create] a registry secret within the `cattle-ui-plugin-system` namespace. Enter the domain of the image address in the *Registry Domain Name* field.
 . Click *☰*, then select *Extensions*, under *Configuration*.
 . On the top right, click *⋮ > Manage Extension Catalogs*.
 . Select the *Import Extension Catalog* button.
