--- a/versions/latest/modules/en/pages/security/hardening-guides/rke2/rke2.adoc
+++ b/versions/latest/modules/en/pages/security/hardening-guides/rke2/rke2.adoc
@@ -142,7 +142,7 @@ These namespaces are exempted to allow system pods to run without restrictions, 
 
 [NOTE]
 ====
-If you intend to import an RKE cluster into Rancher, please consult the xref:../../../../how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/psa-config-templates.adoc[documentation] for how to configure the PSA to exempt Rancher system namespaces.
+If you intend to import an RKE cluster into Rancher, please consult the xref:security/psact.adoc[documentation] for how to configure the PSA to exempt Rancher system namespaces.
 ====
 --
 
