--- a/versions/latest/modules/en/pages/security/psact.adoc
+++ b/versions/latest/modules/en/pages/security/psact.adoc
@@ -37,7 +37,7 @@ Tab RKE2 and K3s::
 [pass]
 <h3><a class="anchor" href="#_hardening_the_cluster"></a>Hardening the Cluster</h3>
 
-If you select the *rancher-restricted* template but don't select a *CIS Profile*, you won't meet required CIS benchmarks. See the xref:../../../reference-guides/rancher-security/hardening-guides/rke2-hardening-guide/rke2-hardening-guide.adoc[RKE2 hardening guide] for more details.
+If you select the *rancher-restricted* template but don't select a *CIS Profile*, you won't meet required CIS benchmarks. See the xref:security/hardening-guides/rke2/rke2.adoc[RKE2 hardening guide] for more details.
 --
 
 Tab RKE1::
